# ramda.py

./: .coveragerc  .travis.yml  README.md  dev-requirements.txt  setup.cfg  setup.py  tox.ini
src/internal/: __init__.py
src/ramda/: __init__.py  function.py  list.py  logic.py  math.py  object.py  relation.py  type.py
src/ramda/internal/: __init__.py
src/ramda/shared/: __init__.py
test/: common.py  test_function.py  test_internal.py  test_list.py  test_logic.py  test_math.py  test_object.py  test_relation.py  test_type.py
