[metadata]
name = ramda
author = Alain Péteut
author-email = alain.peteut@yahoo.com
home-page = https://github.com/peteut/ramda.py
summary = Ramda, ported to Python

[tool:pytest]
testpaths = tests
addopts = --flake8
flake8-ignore =
    F405
flake8-exclude =
    test/*
flake8-max-line-length = 79
timeout = 2

[flake8]
ignore =
    F405,
    E731
exlude = __init__.py
