[metadata]
name = ramda
author = Alain Péteut
author-email = alain.peteut@yahoo.com
home-page = https://github.com/peteut/ramda.py
summary = Ramda, ported to Python

[tool:pytest]
testpaths = test
addopts = --flake8
flake8-ignore =
    F405,
    E731
flake8-exclude =
    test/*
flake8-max-line-length = 99
timeout = 2

[flake8]
ignore =
    F405,
    E731
max-line-length = 99
exlude = __init__.py

[bdist_wheel]
python-tag = py3
